testsuite/tests/generic-optional-arguments/extension_not_allowed.compilers.reference
File "extension_not_allowed.ml", line 19, characters 39-42:
19 |   let concat ?'(sep : string option <- " ") xs =
                                            ^^^
Error: This expression has type "string" but an expression was expected of type
         "string option"
